# Higher-computational-methods

./: README.md
10_RG/: Mdep_q2_J05_Nit10.txt  Mdep_q2_J05_Nit3.txt  Mdep_q6_J05_Nit10.txt  Mdep_q6_J05_Nit3.txt  Nitdep_q2_J05_M20.txt  Nitdep_q6_J05_M20.txt  Nitdep_q6_J05_M3.txt  Nitdep_q6_J05_M6.txt  a.out  heks__q=2.txt  heks__q=2_N10_M10_J1.txt  heks__q=3_N8_M9_J1.txt  heks__q=4_N10_M10_J1.txt  heks__q=4_N12_M26_J1.txt  heks__q=4_N12_M26_J1_new.txt  heks__q=5_N10_M10_J1.txt  heks__q=5_N12_M20_J1.txt  heks__q=5_N12_M26_J1_nonorm.txt  heks__q=6_N12_M16_J1.txt  lnz_16st_q=2_M16_py.txt  lnz_16st_q=3_M16_py.txt  lnz_16st_q=3_M20_cpp.txt  lnz_16st_q=4_M16_py.txt  lnz_16st_q=4_M18_cpp.txt  lnz_16st_q=5_M16_py.txt  lnz_16st_q=5_M18_cpp.txt  lnz_16st_q=6_M16_py.txt  lnz_16st_q=6_M20_cpp.txt  lnz_16st_q=6_M30_cpp.txt  lnz_20st_q=2_M20_cpp.txt  main.cpp  narisi.py  potts_16_q=2_J=05.txt  potts_32_q=5_J=05.txt  potts_q2_32_J1.txt  (+15 more)
9_DMRG_II/: CMakeLists.txt  a.out  narisi.py
9_DMRG_II/include/: simple_linear_regression.h
9_DMRG_II/project_data/: 1.energije_n_tebd.txt  1_Mdep_e0.txt  1_betta_en_dep.txt  2_20n_corr.txt  2_32n_corr.txt  2_corr_32_base_beta2.txt  2_corr_32_time_random.txt  2_corr_50.txt  2_corr_80.txt  2_norm10.txt  3_2_domain_30spin.txt  3_2_domain_60.txt  3_3_domain_32.txt  3_3_domain_60_diffsize.txt  3_3_domain_60_diffsize2.txt  3_3_domain_60spin.txt  3_3_domain_80.txt  3_ksidep.txt  3_mag_32.txt  3_magn_100.txt  3_magn_60.txt  3_magn_80.txt  corr10space.txt  corr10timerandom.txt  corr_test.txt  profilmag.txt  randvec.txt
9_DMRG_II/src/: main.cpp  tebd.hpp
(+23 files in other folders)
